# catalog-test

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0d2635274156_изменил_тип_колонки_price.py  5321f204402a_изменил_тип_колонки_price_на_integer.py  70efcfa4e614_initial_schema.py
app/: main.py
app/categories/: dao.py  models.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/customers/: dao.py  models.py
app/orders/: dao.py  models.py  routes.py  schemas.py  service.py
app/products/: dao.py  models.py  routes.py  schemas.py  service.py
sql/: 1.1_products.sql  1.2_categories.sql  1.3_clients.sql  1.4_orders.sql  2.1_total_sum.sql  2.2_direct_children_count.sql  2.3_top5_products_last_month.sql  Предложения по оптимизации.md
