[project]
name = "catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "granian>=2.7.3",
    "greenlet>=3.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.35",
]
